; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/microchip/extr_enc28j60.c_rx_packet_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/microchip/extr_enc28j60.c_rx_packet_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RSV_SIZE = common dso_local global i64 0, align 8
@RXEND_INIT = common dso_local global i64 0, align 8
@RXSTART_INIT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @rx_packet_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rx_packet_start(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @RSV_SIZE, align 8
  %6 = add nsw i64 %4, %5
  %7 = load i64, i64* @RXEND_INIT, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %9, label %18

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @RSV_SIZE, align 8
  %12 = add nsw i64 %10, %11
  %13 = load i64, i64* @RXEND_INIT, align 8
  %14 = load i64, i64* @RXSTART_INIT, align 8
  %15 = sub nsw i64 %13, %14
  %16 = add nsw i64 %15, 1
  %17 = sub nsw i64 %12, %16
  store i64 %17, i64* %2, align 8
  br label %22

18:                                               ; preds = %1
  %19 = load i64, i64* %3, align 8
  %20 = load i64, i64* @RSV_SIZE, align 8
  %21 = add nsw i64 %19, %20
  store i64 %21, i64* %2, align 8
  br label %22

22:                                               ; preds = %18, %9
  %23 = load i64, i64* %2, align 8
  ret i64 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
